Fix import statement for Scissors component in Game.jsx and add z-index to modal-wrapper in Rules.css

--- a/src/components/Rules/Rules.css
+++ b/src/components/Rules/Rules.css
@@ -33,6 +33,7 @@
   }
 
   .modal-wrapper {
+    z-index: 1000;
     width: 100vw;
     height: 100vh;
     position: fixed;
